--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -42,9 +42,6 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.google.code.gson:gson:2.4'
 
-    // Dagger 2
-    apt 'com.google.dagger:dagger-compiler:2.0'
-    compile 'com.google.dagger:dagger:2.0'
-    provided 'javax.annotation:jsr250-api:1.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
 
 }
